# hydrophonitor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  deploy.sh  flake.nix  flash.sh  hydrophonitor-config.txt  notes.md  resources.md  setup.md  todo.md
.github/workflows/: build-image.yml
audio-logger/: .gitignore  Cargo.toml  Makefile  README.md  default.nix  flake.nix  result  run_test.sh
audio-logger/src/: cli.rs  constants.rs  getters.rs  input_handling.rs  main.rs  merge.rs  play.rs  print_configs.rs  recorder.rs
configuration/: hydrophonitor-config.txt  setup-raspberry-pi.sh  wpa_supplicant.conf
data/depth/: 2022-09-03T17-55-58_depth_data.csv  2022-09-03T18-01-18_depth_data.csv  2022-09-04T11-50-21_depth_data.csv  2022-09-04T11-56-09_depth_data.csv
data/gps/: 2022-08-20T12-23-39_GPS_data.csv
depth-logger/: record-depth-temp.py  record-depth.py  requirements.txt
docs/: logging.md  resources.md  setup.md
gps-logger/: record-gps.py  requirements.txt
hp-cli/: Cargo.toml
hp-cli/src/: main.rs
lcd-display/: test_lcd.py
modules/: audio-recorder.nix
modules/audio-recorder/: audio-recorder.nix  default.nix  umc404hd-autocapture.sh
modules/deployment-start/: default.nix
modules/logging/: default.nix
modules/real-time-clock/: i2c-rtc.nix
modules/shutdown-button/: Cargo.toml  default.nix  service.nix
modules/shutdown-button/src/: main.rs
old-setup/: README.md  RasPi_Conf1.1.odt
old-setup/old-scripts/: GPSloggerStart.sh  gpsscriptnew.py  pressure_and_temp.py
pi-config/: userconf.txt
scripts/: audio-setup-utils.sh  build-package.sh  export-config-values.sh  install-from-package.sh  package-to-pi.sh  setup-audio.sh  setup-gps.sh  setup-pressure-depth.sh  setup-raspberry-pi.sh  setup-rtc-1.sh  setup-rtc-2.sh  setup-shutdown-button.sh  start-all.sh  start-audio.sh  start-gps.sh  start-jack.sh  start-pressure-depth.sh
targets/raspberry-pi-3/: default.nix  i2c.nix
targets/raspberry-pi-4/: default.nix
