[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { url = "https://github.com/clap-rs/clap", features = ["derive"] }
cpal= { version = "0.13.5", features = ["jack"] }
anyhow = "1.0.61"
hound = "3.4.0"
chrono = "0.4.22"
ctrlc = "3.2.3"
rodio = "0.16.0"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd"))'.dependencies]
alsa = "0.6"
nix = "0.23"
libc = "0.2.65"
parking_lot = "0.12"
jack = { version = "0.9", optional = true }