[package]
name = "hp-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.1.11", features = ["derive"] }
hound = "3.5.0"
indicatif = "0.17.3"
walkdir = "2.3.3"
